Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35342

Server crashes when creating index on a rocksdb table

    XMLWordPrintable

Details

    Description

      INSTALL SONAME 'ha_rocksdb';
      CREATE TABLE t (a INT) ENGINE=RocksDB;
      ALTER TABLE t ADD INDEX (a);
      

      Leads to:

      CS 11.2.6 52723ec09a03859e4e77f7a7465e809e18aa2edf (Debug)

      Core was generated by `/test/MD291024-mariadb-11.2.6-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x0000563f8d106902 in handler::ha_index_init (this=this@entry=0x154fc4268fb0, idx=0, sorted=sorted@entry=true)at /test/11.2_dbg/sql/handler.cc:3755
      [Current thread is 1 (Thread 0x15501409e700 (LWP 943226))]
      (gdb) bt
      #0  0x0000563f8d106902 in handler::ha_index_init (this=this@entry=0x154fc4268fb0, idx=0, sorted=sorted@entry=true) at /test/11.2_dbg/sql/handler.cc:3755
      #1  0x0000154ff0b3d53c in myrocks::ha_rocksdb::inplace_populate_sk (this=this@entry=0x154fc4268fb0, new_table_arg=new_table_arg@entry=0x155014099fe0, indexes=std::unordered_set with 1 element = {  [0] = std::shared_ptr<myrocks::Rdb_key_def> (use count 3, weak count 0) = {    get() = 0x154fc42c8ea0  }}) at /test/11.2_dbg/storage/rocksdb/ha_rocksdb.cc:12854
      #2  0x0000154ff0b3dd0a in myrocks::ha_rocksdb::inplace_alter_table (this=0x154fc4268fb0, altered_table=0x155014099fe0, ha_alter_info=0x155014099f20) at /test/11.2_dbg/storage/rocksdb/ha_rocksdb.cc:12745
      #3  0x0000563f8cebbd3b in handler::ha_inplace_alter_table (ha_alter_info=0x155014099f20, altered_table=0x155014099fe0, this=<optimized out>) at /test/11.2_dbg/sql/handler.h:4904
      #4  mysql_inplace_alter_table (thd=thd@entry=0x154fc4000d48, table_list=0x154fc4013648, table=table@entry=0x154fc42c5f58, altered_table=altered_table@entry=0x155014099fe0, ha_alter_info=ha_alter_info@entry=0x155014099f20, target_mdl_request=target_mdl_request@entry=0x15501409a850, ddl_log_state=0x155014099f00, trigger_param=0x15501409a3f0, alter_ctx=0x15501409b490, partial_alter=@0x155014099e97: false, start_alter_id=@0x155014099ea0: 0, if_exists=false) at /test/11.2_dbg/sql/sql_table.cc:7918
      #5  0x0000563f8ced354a in mysql_alter_table (thd=thd@entry=0x154fc4000d48, new_db=new_db@entry=0x154fc4005b78, new_name=new_name@entry=0x154fc4005fd8, create_info=create_info@entry=0x15501409c300, table_list=<optimized out>, table_list@entry=0x154fc4013648, recreate_info=recreate_info@entry=0x15501409c170, alter_info=0x15501409c190, order_num=0, order=0x0, ignore=false, if_exists=false) at /test/11.2_dbg/sql/sql_table.cc:11342
      #6  0x0000563f8cf5e298 in Sql_cmd_alter_table::execute (this=<optimized out>, thd=0x154fc4000d48) at /test/11.2_dbg/sql/structs.h:569
      #7  0x0000563f8cde0cde in mysql_execute_command (thd=thd@entry=0x154fc4000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/11.2_dbg/sql/sql_parse.cc:5892
      #8  0x0000563f8cdc8889 in mysql_parse (thd=thd@entry=0x154fc4000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x15501409d2f0) at /test/11.2_dbg/sql/sql_parse.cc:7938
      #9  0x0000563f8cdd70c1 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x154fc4000d48, packet=packet@entry=0x154fc400b229 "ALTER TABLE t ADD INDEX (a)", packet_length=packet_length@entry=27, blocking=blocking@entry=true) at /test/11.2_dbg/sql/sql_class.h:1412
      #10 0x0000563f8cdd9a41 in do_command (thd=0x154fc4000d48, blocking=blocking@entry=true) at /test/11.2_dbg/sql/sql_parse.cc:1407
      #11 0x0000563f8cf56e2e in do_handle_one_connection (connect=<optimized out>, connect@entry=0x563f91065cc8, put_in_cache=put_in_cache@entry=true) at /test/11.2_dbg/sql/sql_connect.cc:1439
      #12 0x0000563f8cf573eb in handle_one_connection (arg=arg@entry=0x563f91065cc8) at /test/11.2_dbg/sql/sql_connect.cc:1341
      #13 0x0000563f8d3d0582 in pfs_spawn_thread (arg=0x563f90fd27c8) at /test/11.2_dbg/storage/perfschema/pfs.cc:2201
      #14 0x00001550156ba609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #15 0x00001550152a6133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 11.2.6 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.5.27 (dbg), 10.5.27 (opt), 10.6.20 (dbg), 10.6.20 (opt), 10.11.10 (dbg), 10.11.10 (opt), 11.2.6 (opt), 11.6.2 (dbg), 11.6.2 (opt), 11.7.0 (dbg), 11.7.0 (opt)

      The crash occurs after this commit

      commit 52723ec09a03859e4e77f7a7465e809e18aa2edf (11.2)
      Author: Oleg Smirnov <olernov@gmail.com>
      Date:   Mon Oct 28 18:48:55 2024 +0700
       
          MDEV-34880 Incorrect result for query with derived table having TEXT field
          
          Fixup: check key flags only in the case of successful index initialization
      

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: